Fix multiple rule alignment issue in html report

--- a/support/rulehunter/css/sitestyle.css
+++ b/support/rulehunter/css/sitestyle.css
@@ -111,6 +111,10 @@ div.aggregators {
   margin-right: 3em;
 }
 
+div.rule {
+  clear: left;
+}
+
 table td.goalPassed-true {
   background-color: #CFC;
 }
